--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,65 @@
 
 
 /* End Projects Area */ 
+
+/* Start Subscribe Area*/ 
+
+.site_main .subscribe_area .subscribe{
+    background: url(../img/subscribe.jpg) no-repeat;
+    padding: 10rem 0;
+    margin: 3rem auto;
+}
+
+.site_main .subscribe_area .subscribe .subscribe-title h4{
+    font: normal 700 30px/ 30px var(--roboto);
+    color: whitesmoke;
+}
+
+.site_main .subscribe_area .subscribe .subscribe-title p{
+    color: whitesmoke;
+    padding: 1rem 4rem;
+}
+
+.site_main .subscribe_area .subscribe form .input-textbox input{
+    width: 400px;
+    padding: 1.5rem 1rem;
+    border: 1px solid whitesmoke;
+    background: transparent;
+    color: white;
+    font: normal 500 17px/20px var(--roboto);
+}
+
+.site_main .subscribe_area .subscribe form .input-textbox input::placeholder{
+    color: whitesmoke;
+}
+
+.site_main .subscribe_area .subscribe form .btn-submit button{
+    background: whitesmoke;
+    color: #000;
+    padding: .7rem 2rem;
+}
+
+/* End Subscribe Area */ 
+
+/* Footer Area */ 
+
+footer.footer_area{
+    padding: 5rem 0;
+    background: url(../img/footer.png) no-repeat;
+}
+
+footer.footer_area .social h5{
+    font: normal 500 23px/ 30px var(--roboto);
+}
+
+footer.footer_area .social a > i{
+    font-size:22px;
+    padding: 2rem;
+    color: var(--border-color);
+}
+
+footer.footer_area .social a:hover > i{
+    color: var(--primary-color);
+}
+
+/* End Footer */ 
